Пример простой команды

--- a/03_Основные_концепции_WPF/07_Commands/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/07_Commands/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <StackPanel HorizontalAlignment="Left">
+            <Button x:Name="btn" Content="Help" Width="150"
+                    Command="ApplicationCommands.Help">
+            </Button>
+            <TextBlock x:Name="txtInfo" Margin="5" MinHeight="200"/>
+        </StackPanel>
     </Grid>
 </Window>
