--- a/03_Основные_концепции_WPF/07_Commands/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/07_Commands/MainWindow.xaml
@@ -6,8 +6,14 @@
         xmlns:local="clr-namespace:_07_Commands"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.CommandBindings>
+        <CommandBinding Command="New" Executed="CommandBinding_Executed"/>
+    </Window.CommandBindings>
+    
     <Grid>
-        <Button Command="New" Content="New" Width="120" Height="30"/>
+        <Button Command="New" Content="Help" Width="120" Height="30"/>
+        <!--<Button Command="New" Content="New" Width="120" Height="30"/>-->
         <!--<StackPanel HorizontalAlignment="Left">
             <Button x:Name="btn" Content="Help" Width="150"
                     Command="ApplicationCommands.Help">
