Пример создания шаблона кнопки

--- a/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <StackPanel>
+            <Button Content="Кнопка" Width="120" Height="50" Margin="10">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border BorderBrush="Green" BorderThickness="5"
+                                Background="Beige" CornerRadius="3">
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
