--- a/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
@@ -13,6 +13,7 @@
                     <ControlTemplate TargetType="Button">
                         <Border BorderBrush="Green" BorderThickness="5"
                                 Background="Beige" CornerRadius="3">
+                            <ContentPresenter/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
