--- a/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
@@ -8,12 +8,12 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel>
-            <Button Content="Кнопка" Width="120" Height="50" Margin="10">
+            <Button Content="Кнопка" Width="120" Height="50" Margin="10" Padding="35,10,0,0">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border BorderBrush="Green" BorderThickness="5"
                                 Background="Beige" CornerRadius="3">
-                            <ContentPresenter/>
+                            <ContentPresenter Margin="{TemplateBinding Padding}"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
