--- a/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
@@ -6,13 +6,53 @@
         xmlns:local="clr-namespace:_08_Templates"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+
+    <Window.Resources>
+        <Style x:Key="default" TargetType="Button">
+            <Setter Property="Background" Value="AliceBlue"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Padding" Value="30,3"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="40"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="_border" 
+                                BorderBrush="Black" 
+                                BorderThickness="3"
+                                CornerRadius="8"
+                                Background="{TemplateBinding Background}">
+                            <ContentPresenter Margin="{TemplateBinding Padding}"/>
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="_border" Property="Background" Value="Blue"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            
+        </Style>
+    </Window.Resources>
+
+    <StackPanel HorizontalAlignment="Left">
+        <Button Content="Кнопка 1" Style="{StaticResource default}" />
+        <Button Content="Кнопка 2" Style="{StaticResource default}" />
+        <Button Content="Кнопка 3" Style="{StaticResource default}" />
+    </StackPanel>
+    
+    <!--Пример 1-->
+    <!--<Grid>
         <StackPanel>
-            <Button Content="Кнопка" Width="120" Height="50" Margin="10" Padding="35,10">
+            <Button Background="AliceBlue" Content="Кнопка" Width="120" Height="50" Margin="10" Padding="35,10">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border x:Name="_border" BorderBrush="Green" BorderThickness="5"
-                                Background="Beige" CornerRadius="3">
+                                Background="{TemplateBinding Background}" CornerRadius="3">
                             <ContentPresenter Margin="{TemplateBinding Padding}"/>
                         </Border>
 
@@ -25,5 +65,6 @@
                 </Button.Template>
             </Button>
         </StackPanel>
-    </Grid>
+    </Grid>-->
+    
 </Window>
