Добавление шаблона в словарь ресурсов

--- a/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/MainWindow.xaml
@@ -43,6 +43,8 @@
         <Button Content="Кнопка 1" Style="{StaticResource default}" />
         <Button Content="Кнопка 2" Style="{StaticResource default}" />
         <Button Content="Кнопка 3" Style="{StaticResource default}" />
+        <Button Margin="10" Content="Кнопка 3" />
+        <Button Margin="10" Content="Кнопка 3" />
     </StackPanel>
     
     <!--Пример 1-->
