--- a/03_Основные_концепции_WPF/08_Templates/App.xaml
+++ b/03_Основные_концепции_WPF/08_Templates/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:_08_Templates"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary1.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
