--- a/03_Основные_концепции_WPF/09_LVTrees/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/09_LVTrees/MainWindow.xaml
@@ -6,8 +6,50 @@
         xmlns:local="clr-namespace:_09_LVTrees"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Кнопка" />
-        <Label Content="Текст" />
+
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Width" Value="180"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Background" Value="AliceBlue"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+    </Window.Resources>
+    
+    <Grid ShowGridLines="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel>
+            <Button x:Name="logicBtn"  
+                    Content="Обход LogicalTree"
+                    Click="logicBtn_Click"
+                    />
+            <Button x:Name="visualBtn" 
+                    Content="Обход VisualTree"
+                    Click="visualBtn_Click"
+                    />
+            <Button x:Name="ClearBtn"
+                    Content="Очистить"
+                    Click="ClearBtn_Click"
+                    />
+        </StackPanel>
+
+        <ScrollViewer Grid.Column="1"
+                      VerticalScrollBarVisibility="Visible"
+                      HorizontalScrollBarVisibility="Visible"
+                      >
+            <TextBlock x:Name="txt" 
+                       Margin="5" 
+                       Background="AliceBlue"
+                       TextWrapping="Wrap"
+                       FontSize="16">
+            </TextBlock>
+        </ScrollViewer>
+        
     </Grid>
 </Window>
