Создание шаблона данных

--- a/03_Основные_концепции_WPF/10_DataTemplate/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/10_DataTemplate/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_10_DataTemplate"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="360" Width="480">
 
+    <Grid>
+        <ListBox x:Name="_listStudents">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path=Name}" Padding="3"/>
+                        <TextBlock Text="{Binding Path=SurName}" Padding="3"/>
+                        <TextBlock Text="{Binding Path=ID}" Padding="3"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
