--- a/03_Основные_концепции_WPF/11_ObservableCollection/MainWindow.xaml
+++ b/03_Основные_концепции_WPF/11_ObservableCollection/MainWindow.xaml
@@ -5,8 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_11_ObservableCollection"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="360" Width="480">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <ListBox x:Name="_listBox" Margin="10" FontSize="16"/>
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <StackPanel>
+                <Label Margin="5">Имя:</Label>
+                <Label Margin="5">Фамилия:</Label>
+                <Label Margin="5">Возраст:</Label>
+                <Button Margin="10" Height="30" Click="AddPerson_Click">
+                    Добавить
+                </Button>
+            </StackPanel>
+            <StackPanel>
+                <TextBox x:Name="_txtName" Margin="10" MinWidth="120"></TextBox>
+                <TextBox x:Name="_txtSur" Margin="10" MinWidth="120"></TextBox>
+                <TextBox x:Name="_txtAge" Margin="10" MinWidth="120" 
+                         PreviewTextInput="_txtAge_PreviewTextInput"
+                         />
+            </StackPanel>
+        </StackPanel>
 
     </Grid>
 </Window>
