--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -4,9 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StartUpMVVM"
+        xmlns:vm="clr-namespace:StartUpMVVM.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Title}"
+        Height="450" Width="800">
+    
+    <Window.DataContext>
+        <vm:MainWindowViewModel />
+    </Window.DataContext>
+
     <Grid>
+        <TextBox Margin="5,10,0,0"
+                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
+                 FontSize="16"
+                 VerticalAlignment="Top"
+                 HorizontalAlignment="Left"
+                 Width="300"
+                 >
+            
+        </TextBox>
 
     </Grid>
 </Window>
