FontAwesome установка, пакет для иконок

--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -53,7 +53,12 @@
         </StatusBar>
 
         <TabControl>
-            <TabItem Header="Вкладка 1">
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Вкладка 1"/>
+                    </StackPanel>
+                </TabItem.Header>
                 <Grid ShowGridLines="True">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
