--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -57,7 +57,10 @@
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
-                        <fa></fa>
+                        <fa:ImageAwesome Height="13" Margin="0,0,5,0" 
+                                         Icon="Regular_File"
+                                         Foreground="Blue">
+                        </fa:ImageAwesome>
                         <TextBlock Text="Вкладка 1"/>
                     </StackPanel>
                 </TabItem.Header>
