--- a/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
+++ b/Проект_1/StartUpMVVM/Views/Windows/MainWindow.xaml
@@ -43,6 +43,18 @@
             <MenuItem Header="Помощь">
                 <MenuItem Header="О программе"/>
             </MenuItem>
+            
+            <!--Команды для переключения страниц-->
+            <MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="-1">
+                <MenuItem.Header>
+                    <fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleLeft"/>
+                </MenuItem.Header>
+            </MenuItem>
+            <MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="+1">
+                <MenuItem.Header>
+                    <fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleRight"/>
+                </MenuItem.Header>
+            </MenuItem>
         </Menu>
 
         <StatusBar DockPanel.Dock="Bottom">
@@ -52,9 +64,10 @@
             <StatusBarItem>
                 <ProgressBar Width="120" Height="14" Value="40"/>
             </StatusBarItem>
+            <StatusBarItem Content="{Binding SelectedPageIndex}"/>
         </StatusBar>
 
-        <TabControl>
+        <TabControl SelectedIndex="{Binding SelectedPageIndex}">
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -110,7 +123,7 @@
                                     DataFieldY="YValue"/>
                 </oxy:Plot>
             </TabItem>
-        
+
         </TabControl>
             
     </DockPanel>
